--- a/css/default.css
+++ b/css/default.css
@@ -460,7 +460,7 @@
 /***** Footer Area Css *****************************************************************
 ***************************************************************************************/
 .enigma_footer_area{
-	background: #31A3DD;
+	background: #000000;
 	border-top: 0px solid #6B6B6B;
 }
 /***** Contact Info Css *****************************************************************
