--- a/style.css
+++ b/style.css
@@ -149,6 +149,10 @@ line-height: 26px;
 	background-size: 100% 100%;
 	background-image: url(./images/webo.png);
 }
+.social li.renren{
+	background-size: 100% 100%;
+	background-image: url(./images/renren.png);
+}
 
 .enigma_heading_title {
 	display: block;
@@ -196,7 +200,7 @@ line-height: 26px;
 /* Flex Slider css *****************************************************************************************************************
 ********************************************************************************************************************************/ 
 .carousel{
-	margin-bottom:40px;
+	margin-bottom:0px;
 }
 
 .carousel-inner img{
@@ -449,6 +453,8 @@ line-height: 26px;
 }
 .img-wrapper-star{
 	margin-bottom:10px;
+	margin-left:-15px;
+	margin-right:-15px;
 	overflow:hidden;
 }
 .enigma_home_portfolio_showcase {
@@ -2421,7 +2427,9 @@ padding-top: 20px;
 	padding-top: 130px;
 }
 .eventdes{
+
 	overflow: scroll;
+	overflow-x: hidden;
 	color: #ffffff;
 
 	height:500px;
