--- a/superfish/superfish.css
+++ b/superfish/superfish.css
@@ -1,4 +1,4 @@
-nav { float: right; }
+nav { float: right; margin-right: 10px}
 
 /*** ESSENTIAL STYLES ***/
 .sf-menu, .sf-menu * { margin: 0; padding: 0; list-style: none; }
