--- a/style.css
+++ b/style.css
@@ -2447,7 +2447,7 @@ padding-top: 20px;
 	min-width: 320px;
 	max-width: 480px;
 	width: 48%;
-	height: auto;
+	max-height: 480px;
 	background: #3085a3;
 	text-align: center;
 	cursor: pointer;
@@ -2456,7 +2456,6 @@ padding-top: 20px;
 figure img {
 	position: relative;
 	display: block;
-	min-height: 100%;
 	max-width: 100%;
 	opacity: 0.8;
 }
