--- a/superfish/superfish.css
+++ b/superfish/superfish.css
@@ -1,9 +1,9 @@
-nav { float: right; margin-right: 10px}
+nav { float: left;}
 
 /*** ESSENTIAL STYLES ***/
 .sf-menu, .sf-menu * { margin: 0; padding: 0; list-style: none; }
 
-.sf-menu { line-height: 1.0; }
+.sf-menu { line-height: 1.0;padding-left:55px; }
 
 .sf-menu ul li { width: 100%; }
 
@@ -17,16 +17,16 @@ nav { float: right; margin-right: 10px}
 
 ul.sf-menu li:hover li ul, ul.sf-menu li.sfHover li ul { top: -999em; }
 
-ul.sf-menu li li:hover ul, ul.sf-menu li li.sfHover ul { left: 159px; /* match ul width */ top: 1px; }
+ul.sf-menu li li:hover ul, ul.sf-menu li li.sfHover ul { left: 180px; /* match ul width */ top: 1px; }
 
 ul.sf-menu li li:hover li ul, ul.sf-menu li li.sfHover li ul { top: -999em; }
 
 ul.sf-menu li li li:hover ul, ul.sf-menu li li li.sfHover ul { left: 10em; /* match ul width */ top: 0; }
 
 /*** STYLIZATION ***/
-.sf-menu > li { margin-left:1px; }
+.sf-menu > li { margin-left:10px; }
 
-.sf-menu > li > a { font: 800 17px/39px Isocpeur; height: 62px;  padding: 0 10px 0 20px; text-transform: uppercase;color:white; }
+.sf-menu > li > a { font: 700 15px/29px Isocpeur; height: 62px;  padding: 0 0px 0 0px; text-transform: uppercase;color:white; }
 
 .sf-menu > li > a:hover { color: #BD242C;  text-shadow: 0 0 0; }
 
@@ -38,9 +38,9 @@ ul.sf-menu li li li:hover ul, ul.sf-menu li li li.sfHover ul { left: 10em; /* ma
 
 .sf-menu > li.active { }
 
-.sf-menu ul { position: absolute; top: -999em; width: 200px; padding: 0; }
+.sf-menu ul { position: absolute; top: -999em; width: 180px; padding: 0; }
 
-.sf-menu li li a { font: 800 17px/39px Isocpeur; background: none no-repeat black;color: white; text-shadow: none; padding: 0 6px 0 12px; text-align: center;}
+.sf-menu li li a { font: 700 15px/29px Isocpeur; background: none no-repeat black;color: white; text-shadow: none; padding: 0 6px 0 12px; text-align: center;}
 
 .sf-menu li li {  }
 
