--- a/style.css
+++ b/style.css
@@ -2418,14 +2418,6 @@ padding-top: 20px;
 .starpic{
 	padding-top: 128px;
 }
-
-.event{
-	background: url(images/event_background.jpg);
-	background-repeat: no-repeat;	
-}
-.eventpos{
-	padding-top: 130px;
-}
 .eventdes{
 
 	overflow: scroll;
@@ -2435,6 +2427,25 @@ padding-top: 20px;
 	height:500px;
 }
 .eventdes p{
+	text-indent:20px;
+	font-family: 'Isocpeur';	
+}
+.event{
+	background: url(images/event_background.jpg);
+	background-repeat: no-repeat;	
+}
+.eventpos{
+	padding-top: 130px;
+}
+.stardes{
+
+	overflow: scroll;
+	overflow-x: hidden;
+	color: #ffffff;
+
+	height:130px;
+}
+.stardes p{
 	text-indent:20px;
 	font-family: 'Isocpeur';	
 }
